[package]
name = "slain-core"
description = "SLAIN Core - Pure Rust GPU-accelerated video player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["software-decode"]
software-decode = []
cuda = []
avisynth = []
vapoursynth = []
vulkan-compute = []
rayon = ["dep:rayon"]

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Concurrency
parking_lot.workspace = true
tokio.workspace = true
once_cell = "1.19"

# Hardware access
libloading.workspace = true

# Graphics
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true

# Audio
symphonia.workspace = true
cpal.workspace = true
rubato.workspace = true
ringbuf = "0.4"

# Matroska demuxing
matroska-demuxer = "0.5"

# Video decoding
openh264 = "0.6"
matroska-demuxer = "0.7"

# Regex for parsing
regex = "1.10"

# Image processing
image.workspace = true

# Compression
flate2 = "1.0"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }
ureq = "2.9"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Archive handling
zip = "2.1"
tar = "0.4"

# Directory utilities
dirs = "5.0"

# Networking
local-ip-address = "0.6"

# Window management (for render.rs)
winit = "0.30"

# Parallel processing (optional)
rayon = { version = "1.10", optional = true }

# POSIX libc bindings for low-level system calls
libc = "0.2"

# SQLite for message board
rusqlite = { version = "0.32", features = ["bundled"] }

# Temp files for tests
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
bitflags = "2.4"

# Windows COM/DirectShow APIs
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
]
