[package]
name = "slain-mcp"
description = "SLAIN MCP Server - AI-assisted GPU hardware tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "slain-mcp"
path = "src/main.rs"

[dependencies]
# Core library (shared GPU abstraction)
slain-core = { path = "../slain-core" }

# Workspace shared
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# MCP protocol
async-trait.workspace = true
